Revert "Changed to config to the config on the server"
This reverts commit 91ca12306a099a5ff89ff2b440659c9341067b4b.

--- a/config/betterstorage.cfg
+++ b/config/betterstorage.cfg
@@ -13,10 +13,10 @@ enchantment {
 
 general {
     # If disabled, backpacks don't take up the player's chestplate armor slot.
-    B:backpackChestplate=false
+    B:backpackChestplate=true
 
     # Number of rows in backpacks. Valid values are 1 to 6.
-    I:backpackRows=6
+    I:backpackRows=4
 
     # Number of rows in cardboard boxes. Valid values are 1 to 3.
     I:cardboardBoxRows=1
@@ -37,7 +37,7 @@ general {
     B:enableBackpackInteraction=true
 
     # Allows equipped backpacks to be opened by pressing a key.
-    B:enableBackpackOpen=true
+    B:enableBackpackOpen=false
 
     # If disabled, prevents the christmas event from happening. You monster.
     B:enableChristmasEvent=true
@@ -52,7 +52,7 @@ general {
     B:enableHelpTooltips=true
 
     # If enabled, automated systems can pull out of crafting stations and therefore auto-craft items.
-    B:enableStationAutoCrafting=true
+    B:enableStationAutoCrafting=false
 
     # If disabled, prevents certain warning messages from being logged to the console.
     B:enableWarningMessages=true
@@ -64,7 +64,7 @@ general {
     I:reinforcedColumns=13
 
     # Delay between recipes being autocrafted in the crafting station, in ticks. (Default: 10)
-    I:stationAutocraftDelay=5
+    I:stationAutocraftDelay=10
 }
 
 
